[package]
name = "winecheck"
version = "0.1.0"
edition = "2021"
authors = ["belst <git@bel.st>"]
description = "A simple library to check if a Windows application is running under Wine"
license = "MIT"
repository = "https://github.com/belst/winecheck"
keywords = ["wine", "windows"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_LibraryLoader"]}
